# noah-translator

./: .editorconfig  CHANGELOG  LICENSE  biome.json  components.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: package.yml
.husky/: pre-commit
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/resources/: ocr-aarch64-apple-darwin  ocr-x86_64-apple-darwin
src-tauri/src/: cmd.rs  config.rs  main.rs  monitor.rs  path.rs  plugin.rs  profile.rs  screenshot.rs  shortcut.rs  system_ocr.rs  task.rs  translate.rs  tray.rs  window.rs
src-tauri/src/translator/: bing.rs  google.rs  mod.rs  plugin.rs  translator.rs
src/components/: drag-region.tsx
src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  label.tsx  navigation-menu.tsx  scroll-area.tsx  switch.tsx  tooltip.tsx
src/hooks/: index.ts  useConfig.tsx  useGetState.tsx
src/utils/: env.ts  index.ts  store.ts
src/windows/Config/: index.tsx
src/windows/Config/components/SideBar/: index.tsx
src/windows/Config/pages/Configuration/: index.tsx
src/windows/Config/pages/General/: index.tsx
src/windows/Config/routes/: index.tsx
src/windows/Screenshot/: index.tsx
src/windows/Translate/: index.tsx
src/windows/Translate/components/TranslateTextarea/: index.tsx
updater/: updater.mjs
