[package]
name = "noah-translator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "macos-private-api",
    "os-all",
    "shell-all",
    "global-shortcut-all",
    "fs-all",
    "window-all",
    "path-all",
    "devtools",
    "notification-all",
    "system-tray",
    "http-all",
] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.10"
once_cell = "1.19.0"
log = "0.4.21"
mouse_position = "0.1.4"
chrono = "0.4.38"
nanoid = "0.4.0"
tokio = "1.38.0"
reqwest = "0.12.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "macos")'.dependencies]
window-shadows = "0.2"

[target.'cfg(windows)'.dependencies]
windows = {version="0.58.0",features= ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Globalization", "Storage", "Storage_Streams"] }
window-shadows = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
